fixes #1723, long lines are now visible
svn changeset:4920/svn branch:trunk

--- a/WebContent/ITMILL/themes/default/common/common.css
+++ b/WebContent/ITMILL/themes/default/common/common.css
@@ -154,8 +154,12 @@ input.i-modified,
 	cursor:pointer;
 }
 
+/**
+ * Label has tiny paddings to include contents margins.
+ */
 .i-label {
-	overflow: hidden;
+	padding-top:1px;
+	padding-bottom: 1px;
 }
 
 /* Loading indicator states */
